# django-2-beliyaka98

./: db.sqlite3  pyproject.toml
django2/: settings.py  urls.py
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_rename_news_new.py  0003_comment.py
news/templates/news/: base.html  create.html  detail.html  edit.html  news.html
