[tool.poetry]
name = "django-2-beliyaka98"
version = "0.1.0"
description = "django 2"
authors = ["beliyaka98 <the.akniyet.second@gmail.com>"]
readme = "README.md"
packages = [{include = "django_2_beliyaka98"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
